GetByteArrayLength is incorrect https://bugs.webkit.org/show_bug.cgi?id=75735

Reviewed by Filip Pizlo.

Load the byte array length from the correct location.
This stops an existing test from hanging.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/92538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104330 268f45cc-cd09-0410-ab3c-d52691b4dbfc